# cucounter

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-install-and-test.yml
cucounter/: bindings.cpp  common.h  counter.py  hashtable.cu  hashtable.h  kernels.cu  kernels.h
cucounter/backend/: bindings.cpp  common.h  hashtable.cu  hashtable.h  kernels.cu  kernels.h  util.cu  util.h
scripts/: benchmark.py  check_correctness.py  kmer_counting.py  test.py
tests/: test_counter.py  test_test.py
